--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -192,12 +192,19 @@ user.username }}{% endblock %} {% block breadcrumbs %} {{ profile_breadcrumb() }
                                                 <i class="fas fa-download me-3 text-primary" style="width: 20px"></i>
                                                 <div>
                                                     <small class="text-muted d-block">Экспорт решений</small>
-                                                    <span class="text-primary">Скачать все загруженные практики</span>
+                                                    <span class="text-primary" style="min-width: max-content"
+                                                        >Скачать все загруженные практики</span
+                                                    >
                                                 </div>
                                             </div>
                                             <a
                                                 href="{{ url_for('main.export_user_solutions') }}?t={{ moment().timestamp() }}"
                                                 class="btn btn-outline-primary btn-sm"
+                                                style="
+                                                    justify-content: flex-end;
+                                                    align-items: center;
+                                                    width: fit-content !important;
+                                                "
                                             >
                                                 <i class="fas fa-file-archive me-1"></i>Скачать архив
                                             </a>
